--- a/index.css
+++ b/index.css
@@ -145,17 +145,61 @@ nav .links_wrapper .contact {
   border-top: 1px solid #e6e6e6;
 }
 .banner_wrapper {
-  display: flex;
   flex-wrap: nowrap;
   padding: 10px 0px;
   column-gap: 40px;
   row-gap: 30px;
+  display: flex;
   align-items: center;
   justify-content: center;
   margin: 0 auto;
   background-color: #f5f5f5;
-  padding: 70px 0 0;
+  height: calc(100vh - 100px);
+  background-image: url("./public/img/banner_img.png");
+  background-repeat: no-repeat;
+  background-size: 50%;
+  background-position: bottom right;
 }
+
+@media (max-width: 1440px) {
+  .banner_wrapper {
+    background-size: 55%;
+    background-position: bottom right -20%;
+  }
+}
+@media (max-width: 976px) {
+  .banner_wrapper {
+    height: calc(100vh);
+    background: none;
+    flex-direction: column;
+
+  }
+
+  .banner_wrapper .img_wrapper {
+    min-height: 500px;
+    background-image: url("./public/img/banner_img.png");
+    background-repeat: no-repeat;
+    background-size: 50%;
+    background-position: bottom right;
+
+  }
+}
+@media (max-width: 786px) {
+  .banner_wrapper {
+    height: fit-content;
+    background: none;
+    overflow: hidden;
+  }
+
+  .banner_wrapper .img_wrapper {
+    min-height: 350px;
+    background-image: url("./public/img/banner_img.png");
+    background-repeat: no-repeat;
+    background-size: 360px;
+    background-position: bottom right;
+  }
+}
+
 .banner_wrapper .text_wrapper {
   display: grid;
   place-content: flex-start;
@@ -233,7 +277,7 @@ nav .links_wrapper .contact {
   }
   .banner_wrapper .text_wrapper {
     flex: 1 1 15rem;
-    padding: 10px 10px 100px;
+    padding: 50px 10px 30px;
   }
   .banner_wrapper .img_wrapper {
     flex: 1 1 10rem;
@@ -252,7 +296,7 @@ nav .links_wrapper .contact {
     margin-top: 25px;
   }
   .banner_wrapper {
-    flex-direction: column-reverse;
+    flex-direction: column;
   }
   .banner_wrapper .text_wrapper {
     margin-right: auto;
@@ -298,7 +342,7 @@ nav .links_wrapper .contact {
     gap: 20px;
     text-align: left;
     place-content: flex-start;
-    padding: 0 10px 50px;
+    padding: 0 10px 0px;
   }
   .banner_wrapper .text_wrapper h2 {
     font-size: 3rem;
@@ -317,7 +361,7 @@ nav .links_wrapper .contact {
     margin-top: 10px;
   }
   .banner_wrapper {
-    flex-direction: column-reverse;
+    flex-direction: column;
   }
   .banner_wrapper .text_wrapper {
     margin-right: auto;
@@ -339,7 +383,7 @@ nav .links_wrapper .contact {
     font-size: 30px;
   }
   nav {
-    width: 90%;
+    width: 100%;
   }
   nav .links_wrapper a {
     padding: 8px 35px;
@@ -399,7 +443,7 @@ nav .links_wrapper .contact {
     max-width: 768px;
   }
   .banner_wrapper .text_wrapper h2 {
-    font-size: 54px;
+    font-size: 48px;
   }
   .banner_wrapper .text_wrapper span {
     font-size: 30px;
@@ -434,6 +478,10 @@ nav .links_wrapper .contact {
   }
 }
 @media screen and (min-width: 1280px) {
+  nav {
+    padding-left: 30px;
+    padding-right: 30px;
+  }
   nav .links_wrapper a {
     font-size: 20px;
   }
@@ -455,7 +503,7 @@ nav .links_wrapper .contact {
     margin-bottom: 150px;
   }
   .banner_wrapper .text_wrapper h2 {
-    font-size: 60px;
+    font-size: 50px;
   }
   .banner_wrapper .text_wrapper span {
     font-size: 34px;
