--- a/index.css
+++ b/index.css
@@ -155,6 +155,7 @@ nav .links_wrapper .contact {
   margin: 0 auto;
   background-color: #f5f5f5;
   height: calc(100vh - 100px);
+  min-height: 600px;
   background-image: url("./public/img/banner_img.png");
   background-repeat: no-repeat;
   background-size: 50%;
@@ -229,10 +230,7 @@ nav .links_wrapper .contact {
   font-weight: 300;
   line-height: 1.25;
 }
-.banner_wrapper .text_wrapper span b {
-  font-family: poppins-medium;
-  font-weight: 600;
-}
+
 .banner_wrapper .btn_wrapper {
   display: flex;
   align-items: center;
